--- a/trunk/ddscanner/app/src/main/res/layout/item_notification.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_notification.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="65dp"
     android:background="#fbfbfb">
@@ -9,29 +11,35 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
+            android:id="@+id/image"
             android:layout_width="64dp"
-            android:layout_height="match_parent"
+            android:layout_height="64dp"
             android:src="@drawable/notif_default_avatar"
             android:scaleType="center"/>
+        <android.support.percent.PercentRelativeLayout
+            android:id="@+id/content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <TextView
-            android:layout_weight="3"
-            android:text="Konstantin Konstantinopolsky disliked your review Very loooooooooong name of divespot"
-            android:layout_marginRight="56dp"
+            android:id="@+id/text"
             android:layout_marginTop="10dp"
-            android:layout_width="wrap_content"
+            app:layout_widthPercent="85%"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-medium"
             android:textColor="@color/black_text"
             android:textSize="15sp"
             android:paddingBottom="10dp"/>
         <TextView
-            android:layout_weight="1"
+            android:layout_toRightOf="@+id/text"
+            android:id="@+id/time_ago"
             android:layout_marginTop="13dp"
+            android:gravity="right"
             android:layout_marginRight="15dp"
-            android:layout_width="wrap_content"
+            app:layout_widthPercent="15%"
             android:layout_height="wrap_content"
             android:textSize="12sp"
+            android:textColor="#a3a3a3"
             android:text="1w"/>
+        </android.support.percent.PercentRelativeLayout>
     </LinearLayout>
     <ImageView
         style="@style/DividerStyleFull" />
