--- a/trunk/ddscanner/app/src/main/res/layout/slider_image_fragment.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/slider_image_fragment.xml
@@ -1,29 +1,29 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!---<FrameLayout
+<?xml version="1.0" encoding="utf-8"?><!---<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/framelayout_slider"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
---> <FrameLayout
+-->
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="350dp"
     android:layout_height="400dp"
-    android:layout_gravity="center"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+    android:layout_gravity="center">
+
     <ImageView
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/slider_image"
         android:layout_width="350dp"
         android:layout_height="400dp"
         android:layout_gravity="center" />
+
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleSmall"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_gravity="center"
-        android:visibility="visible"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:layout_gravity="center"
+        android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"/>
+        android:visibility="visible" />
 </FrameLayout>
