--- a/trunk/ddscanner/app/src/main/res/layout/activity_add_photos_to_dive_spot.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_add_photos_to_dive_spot.xml
@@ -10,10 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <Button
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:id="@+id/button_share"
         android:layout_width="320dp"
         android:layout_height="45dp"
+        android:layout_gravity="center_horizontal"
         android:background="@drawable/border_button_orange_2px"
         android:text="SHARE"/>
 </LinearLayout>
