--- a/trunk/ddscanner/app/src/main/res/layout/activity_no_location_permission.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_no_location_permission.xml
@@ -24,13 +24,13 @@
             android:layout_centerHorizontal="true"
             android:gravity="center"
             android:layout_marginTop="16dp"
-            android:text="@string/error_turn_on_location_provider"
+            android:text="@string/error_no_location_permission"
             android:textColor="@color/black_text"
             android:fontFamily="sans-serif"
             android:textSize="16sp" />
 
         <Button
-            android:id="@+id/btn_retry"
+            android:id="@+id/btn_grant_permission"
             style="@style/EmptyButtons"
             android:layout_width="wrap_content"
             android:layout_below="@+id/text"
@@ -39,6 +39,6 @@
             android:paddingTop="12dp"
             android:paddingLeft="30dp"
             android:paddingRight="30dp"
-            android:text="@string/open_settings" />
+            android:text="@string/grant_permission" />
     </RelativeLayout>
 </LinearLayout>
