--- a/trunk/ddscanner/app/src/main/res/layout/dive_spot_photos_list_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dive_spot_photos_list_item.xml
@@ -7,8 +7,16 @@
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/ds_photos_photo"/>
+        android:layout_height="match_parent"/>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleSmall"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_gravity="center"
+        android:visibility="visible" />
     <TextView
         android:id="@+id/number_of_more_images"
         android:visibility="gone"
@@ -21,4 +29,5 @@
         android:gravity="center"
         android:textSize="20sp"
         />
+
 </RelativeLayout>
