--- a/trunk/ddscanner/app/src/main/res/layout/review_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/review_item.xml
@@ -89,10 +89,11 @@
         <LinearLayout
             android:background="?attr/selectableItemBackground"
             android:id="@+id/like_layout"
-            android:minWidth="50dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center"
+            android:gravity="center_vertical"
+            android:paddingRight="15dp"
+            android:paddingLeft="15dp"
             android:orientation="horizontal">
             <ImageView
                 android:id="@+id/likes_image"
@@ -112,11 +113,11 @@
         <LinearLayout
             android:background="?attr/selectableItemBackground"
             android:id="@+id/dislike_layout"
-            android:layout_marginLeft="10dp"
-            android:minWidth="50dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center"
+            android:gravity="center_vertical"
+            android:paddingRight="15dp"
+            android:paddingLeft="15dp"
             android:orientation="horizontal">
             <ImageView
                 android:id="@+id/dislikes_image"
