--- a/trunk/ddscanner/app/src/main/res/layout/view_login.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_login.xml
@@ -50,8 +50,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="13dp"
         android:text="@string/login"
-        android:textColor="@color/orange"
-        android:background="@drawable/splash_activity_login" />
+        android:textColor="@color/white"
+        android:background="@drawable/primary_button" />
 
 
 </RelativeLayout>
