--- a/trunk/ddscanner/app/src/main/res/layout/activity_splash.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_splash.xml
@@ -2,7 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <TextView
+        android:id="@+id/skip"
+        android:layout_alignParentRight="true"
+        android:layout_width="wrap_content"
+        android:padding="20dp"
+        android:layout_height="wrap_content"
+        android:text="@string/skip"
+        android:textColor="#dee9ed"
+        android:fontFamily="sans-serif-medium"/>
     <LinearLayout
         android:id="@+id/main"
         android:layout_width="match_parent"
