--- a/trunk/ddscanner/app/src/main/res/layout/dialog_choose_dive_center.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dialog_choose_dive_center.xml
@@ -1,20 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="280dp"
+    android:layout_width="300dp"
     android:layout_height="340dp"
     android:background="@drawable/dialog_background_choose_dive_center"
     android:orientation="vertical">
 
-    <android.support.v7.widget.SearchView
-        android:id="@+id/searchview"
-        android:gravity="right"
-        android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:background="@android:color/transparent"
-        android:paddingBottom="8dp"
-        android:paddingLeft="25dp"
+    <LinearLayout
+        android:paddingLeft="26dp"
         android:paddingRight="25dp"
-        android:paddingTop="8dp" />
+        android:layout_width="match_parent"
+        android:layout_height="67dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+        <EditText
+            android:lines="1"
+            android:layout_width="wrap_content"
+            android:layout_height="46dp"
+            android:background="@android:color/transparent"
+            android:layout_weight="3.5"
+            android:hint="Choose your dive center"
+            android:textSize="16sp"
+            android:textColor="@color/black_text"
+            android:textColorHint="#a3a3a3"/>
+        <ImageView
+            android:layout_weight="3"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:scaleType="center"
+            android:src="@drawable/ic_search_dialog"/>
+    </LinearLayout>
 
     <ImageView style="@style/DividerStyleFull" />
     <ScrollView
