--- a/trunk/ddscanner/app/src/main/res/layout/dialog_achievemnt_achieved.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dialog_achievemnt_achieved.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/dialog_background_top_corners">
     <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/gongrats"
@@ -15,6 +16,7 @@
         android:textSize="20sp"
         android:fontFamily="sans-serif-medium"/>
     <TextView
+        android:id="@+id/message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="14dp"
