--- a/trunk/ddscanner/app/src/main/res/layout/item_complete_achievement.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_complete_achievement.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="achievementViewModel"
+            type="com.ddscanner.screens.achievements.CompletedAchievementItemViewModel" />
+    </data>
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="6dp"
     android:background="@color/white">
 
@@ -23,7 +29,8 @@
                 android:layout_centerVertical="true"
                 android:layout_width="16dp"
                 android:layout_height="16dp"
-                android:id="@+id/country_flag"/>
+                android:id="@+id/country_flag"
+                app:loadCountryFlagFrom="@{achievementViewModel}"/>
 
             <RelativeLayout
                 android:id="@+id/info"
@@ -38,7 +45,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black_text"
-                    android:text="Professional Photographer" />
+                    android:text="@{achievementViewModel.completeAchievement.name}" />
                 <TextView
                     android:layout_below="@+id/type"
                     android:id="@+id/country"
@@ -46,11 +53,11 @@
                     android:layout_height="wrap_content"
                     android:textColor="#959595"
                     android:textSize="11sp"
-                    tools:text="Vietnam" />
+                    tools:text="@{achievementViewModel.completeAchievement.country}" />
             </RelativeLayout>
             <TextView
                 android:id="@+id/progress"
-                android:text="49/50"
+                android:text="@{achievementViewModel.completeAchievement.points}"
                 android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -65,3 +72,4 @@
 
 
 </RelativeLayout>
+    </layout>
