--- a/trunk/ddscanner/app/src/main/res/layout/item_complete_achievement.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_complete_achievement.xml
@@ -1,75 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
+
         <variable
             name="achievementViewModel"
             type="com.ddscanner.screens.achievements.CompletedAchievementItemViewModel" />
     </data>
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginTop="6dp"
-    android:background="@color/white">
 
-    <ImageView
-        style="@style/DividerStyleFull"
-        android:layout_alignParentTop="true" />
+    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:background="@color/white">
+
+        <ImageView
+            style="@style/DividerStyleFull"
+            android:layout_alignParentTop="true" />
+
         <RelativeLayout
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="13dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true">
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="13dp"
+            android:layout_marginTop="5dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp">
 
             <com.ddscanner.ui.views.AchievementCountryFlagView
-                android:layout_centerVertical="true"
+                android:id="@+id/country_flag"
                 android:layout_width="16dp"
                 android:layout_height="16dp"
-                android:id="@+id/country_flag"
-                app:loadCountryFlagFrom="@{achievementViewModel}"/>
+                android:layout_centerVertical="true"
+                app:loadCountryFlagFrom="@{achievementViewModel}" />
 
             <RelativeLayout
                 android:id="@+id/info"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/country_flag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginLeft="15dp">
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="15dp"
+                android:layout_toRightOf="@+id/country_flag"
+                android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black_text"
-                    android:text="@{achievementViewModel.completeAchievement.name}" />
+                    android:text="@{achievementViewModel.completeAchievement.name}"
+                    android:textColor="@color/black_text" />
+
                 <TextView
-                    android:layout_below="@+id/type"
                     android:id="@+id/country"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_below="@+id/type"
                     android:textColor="#959595"
                     android:textSize="11sp"
                     tools:text="@{achievementViewModel.completeAchievement.country}" />
             </RelativeLayout>
+
             <TextView
                 android:id="@+id/progress"
-                android:text="@{achievementViewModel.completeAchievement.points}"
-                android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="12sp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:text="@{achievementViewModel.completeAchievement.points}"
                 android:textColor="#bbbbbb"
-                android:layout_alignParentRight="true"/>
+                android:textSize="12sp" />
         </RelativeLayout>
 
-    <ImageView
-        style="@style/DividerStyleFull"
-        android:layout_alignParentBottom="true" />
+        <ImageView
+            style="@style/DividerStyleFull"
+            android:layout_alignParentBottom="true" />
 
 
-</RelativeLayout>
-    </layout>
+    </RelativeLayout>
+</layout>
