--- a/trunk/ddscanner/app/src/main/res/layout/item_pending_achievment.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_pending_achievment.xml
@@ -1,78 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginTop="6dp"
-    android:background="@color/white">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        style="@style/DividerStyleFull"
-        android:layout_alignParentTop="true" />
-    <LinearLayout
-        android:paddingTop="7dp"
-        android:paddingBottom="10dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
+    <data>
+
+        <variable
+            name="achievementViewModel"
+            type="com.ddscanner.screens.achievements.PendingAchievementItemViewModel" />
+    </data>
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true">
+        android:layout_marginTop="6dp"
+        android:background="@color/white">
 
-        <com.ddscanner.ui.views.AchievementCountryFlagView
-            android:layout_centerVertical="true"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:id="@+id/country_flag"/>
+        <ImageView
+            style="@style/DividerStyleFull"
+            android:layout_alignParentTop="true" />
+
         <LinearLayout
-            android:id="@+id/info"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/country_flag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black_text"
-                android:text="Professional Photographer"
-                android:layout_marginLeft="15dp"/>
-            <TextView
-                android:id="@+id/country"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#959595"
-                android:textSize="11sp"
-                tools:text="Vietnam"
-                android:layout_marginLeft="15dp"/>
-        </LinearLayout>
-        <TextView
-            android:id="@+id/progress"
-            android:text="49/50"
-            android:layout_alignParentBottom="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:textColor="#bbbbbb"
-            android:layout_alignParentRight="true"/>
-         </RelativeLayout>
-        <com.ddscanner.ui.views.AchievementProgressView
-            android:id="@+id/progress_layout"
             android:layout_width="match_parent"
-            android:layout_marginTop="7dp"
-            android:layout_height="28dp"
-            android:background="@drawable/shark_progress_background"/>
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingBottom="10dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="7dp">
 
-    </LinearLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true">
 
-    <ImageView
-        style="@style/DividerStyleFull"
-        android:layout_alignParentBottom="true" />
+                <com.ddscanner.ui.views.AchievementCountryFlagView
+                    android:id="@+id/country_flag"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_centerVertical="true"
+                    app:loadCountryFlagFrom="@{achievementViewModel}"/>
+
+                <LinearLayout
+                    android:id="@+id/info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@+id/country_flag"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/type"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:text="@{achievementViewModel.pendingAchievement.type}"
+                        android:textColor="@color/black_text" />
+
+                    <TextView
+                        android:id="@+id/country"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:textColor="#959595"
+                        android:textSize="11sp"
+                        android:text="@{achievementViewModel.pendingAchievement.country}"/>
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/progress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:changeProgressTextFrom="@{achievementViewModel}"
+                    android:textColor="#bbbbbb"
+                    android:textSize="12sp" />
+            </RelativeLayout>
+
+            <com.ddscanner.ui.views.AchievementProgressView
+                android:id="@+id/progress_layout"
+                android:layout_width="match_parent"
+                android:layout_height="28dp"
+                android:layout_marginTop="7dp"
+                android:background="@drawable/shark_progress_background"
+                app:changeSharkViewProgress="@{achievementViewModel}"/>
+
+        </LinearLayout>
+
+        <ImageView
+            style="@style/DividerStyleFull"
+            android:layout_alignParentBottom="true" />
 
 
-</RelativeLayout>
+    </RelativeLayout>
+</layout>
