--- a/trunk/ddscanner/app/src/main/res/layout/item_pending_achievment.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_pending_achievment.xml
@@ -72,7 +72,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
-                    android:changeProgressTextFrom="@{achievementViewModel}"
+                    app:changeProgressTextFrom="@{achievementViewModel}"
                     android:textColor="#bbbbbb"
                     android:textSize="12sp" />
             </RelativeLayout>
