--- a/trunk/ddscanner/app/src/main/res/layout/dialog_checked_in.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dialog_checked_in.xml
@@ -1,63 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="320dp"
-    android:layout_height="wrap_content">
+    android:layout_width="320dp"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="49dp"
         android:background="@drawable/checked_in_background_header">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#deffffff"
-            android:text="@string/checkd_in"
-            android:textSize="18sp"
-            android:fontFamily="sans-serif-medium"
             android:layout_centerInParent="true"
-            />
+            android:fontFamily="sans-serif-medium"
+            android:text="@string/checkd_in"
+            android:textColor="#deffffff"
+            android:textSize="18sp" />
+
         <ImageView
             android:layout_width="49dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:src="@drawable/ic_popup_close"
-            android:scaleType="center"/>
+            android:scaleType="center"
+            android:src="@drawable/ic_popup_close" />
     </RelativeLayout>
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-         android:lines="6"
-        android:minHeight="80dp"
-        android:textColor="@color/black_text"
+        android:background="@android:color/transparent"
         android:gravity="top"
-        android:paddingRight="17dp"
-        android:paddingLeft="17dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
         android:hint="@string/write_review_dots"
-        android:textColorHint="#a3a3a3"
-        android:background="@android:color/transparent" />
-    <android.support.v7.widget.RecyclerView
+        android:lines="6"
+        android:minHeight="80dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="17dp"
+        android:paddingRight="17dp"
+        android:paddingTop="10dp"
+        android:textColor="@color/black_text"
+        android:textColorHint="#a3a3a3" />
+
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="17dp"/>
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="17dp">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/photos"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp" />
+    </RelativeLayout>
+
     <View
-        android:layout_marginTop="7dp"
-        style="@style/FullWidthDivider"/>
+        style="@style/FullWidthDivider"
+        android:layout_marginTop="7dp" />
+
     <RatingBar
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="17dp"
         android:id="@+id/rating_bar"
         style="@style/CustomRatingBar"
-        android:rating="3"
         android:layout_width="wrap_content"
         android:layout_height="29dp"
-        android:stepSize="1.0"
-        android:numStars="5"/>
+        android:layout_marginLeft="17dp"
+        android:layout_marginTop="10dp"
+        android:numStars="5"
+        android:rating="3"
+        android:stepSize="1.0" />
+
     <Button
-        android:layout_marginTop="12dp"
         android:layout_width="match_parent"
         android:layout_height="45dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/dialog_achievement_button_background"
-        android:text="@string/close"/>
+        android:text="@string/close" />
 </LinearLayout>
