--- a/trunk/ddscanner/app/src/main/res/layout/fragment_dive_center_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_dive_center_profile.xml
@@ -113,9 +113,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingBottom="20dp">
 
                 <LinearLayout
+                    android:visibility="@{diveCenterViewModel.diveCenterProfile.addresses == null ? View.GONE : View.VISIBLE}"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
@@ -141,6 +143,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:visibility="@{diveCenterViewModel.diveCenterProfile.emails == null ? View.GONE : View.VISIBLE}"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
@@ -166,6 +169,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:visibility="@{diveCenterViewModel.diveCenterProfile.phones == null ? View.GONE : View.VISIBLE}"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
@@ -232,9 +236,9 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:visibility="@{diveCenterViewModel.diveCenterProfile.languages == null ? View.GONE : View.VISIBLE}"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
                     android:orientation="horizontal">
 
                     <ImageView
@@ -274,16 +278,16 @@
 
             <ImageView style="@style/DividerStyleFull" />
 
-            <ImageView
-                style="@style/DividerStyleFull"
-                android:layout_marginTop="@dimen/base_block_margin_top" />
-
             <LinearLayout
+                android:layout_marginTop="@dimen/base_block_margin_top"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:orientation="vertical"
-                android:visibility="visible">
+                android:visibility="@{diveCenterViewModel.diveCenterProfile.photos == null ? View.GONE : View.VISIBLE}">
+
+                <ImageView
+                    style="@style/DividerStyleFull" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -301,13 +305,14 @@
                     android:layout_marginBottom="18dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="14dp" />
-            </LinearLayout>
 
-            <ImageView style="@style/DividerStyleFull" />
+                <ImageView style="@style/DividerStyleFull" />
+
+            </LinearLayout>
 
             <ImageView
                 style="@style/DividerStyleFull"
-                android:layout_marginBottom="@dimen/base_block_margin_top" />
+                android:layout_marginTop="@dimen/base_block_margin_top" />
 
             <LinearLayout
                 android:layout_width="match_parent"
