--- a/trunk/ddscanner/app/src/main/res/layout/activity_search_divespots.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_search_divespots.xml
@@ -12,8 +12,20 @@
         android:layout_height="45dp"
         android:background="@color/white"
         app:tabMode="fixed" />
+    <com.rey.material.widget.ProgressView
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:id="@+id/progress_view"
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:layout_marginTop="50dp"
+        app:pv_autostart="true"
+        app:pv_circular="true"
+        app:pv_progressMode="indeterminate"
+        android:visibility="gone"
+        app:pv_progressStyle="@style/CircularProgress" />
     <android.support.v4.view.ViewPager
         android:id="@+id/search_view_pager"
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
