--- a/trunk/ddscanner/app/src/main/res/values/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values/styles.xml
@@ -423,7 +423,7 @@
     </style>
 
     <style name="SigningInputStyle">
-        <item name="android:background">android:background="@android:color/transparent"</item>
+        <item name="android:background">@android:color/transparent</item>
         <item name="android:textSize">14sp</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:lines">1</item>
