--- a/trunk/ddscanner/app/src/main/res/layout/activity_leave_review.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_leave_review.xml
@@ -38,7 +38,11 @@
             </LinearLayout>
 
             <ImageView style="@style/DividerStyleFull" />
-
+            <TextView
+                android:id="@+id/rating_error"
+                style="@style/ValidationErrorTextView"
+                android:layout_marginLeft="20dp"
+                android:text="@string/rate_ds_error" />
             <ImageView
                 style="@style/DividerStyleFull"
                 android:layout_marginTop="@dimen/base_block_margin_top" />
