--- a/trunk/ddscanner/app/src/main/res/layout/activity_main.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_main.xml
@@ -83,7 +83,7 @@
             </android.support.percent.PercentRelativeLayout>
         </RelativeLayout>
 
-        <android.support.v4.view.ViewPager
+        <com.ddscanner.ui.views.NonSwipeableViewPager
             android:id="@+id/main_viewpager"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
